# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1360 2010-09-02 09:44:15 mg Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

3.0.0 beta3 ????-??-??
 - 2010-09-02 Fixed bug#5629 - Search Dialog of new Ticket Search Feature is not working with IE7.
 - 2010-09-02 Fixed bug#5582 - Ticket::Frontend::MergeText and special carachters.
 - 2010-09-01 Fixed bug#5851 - 3 AJAX refresh indicators are shown at the top of the AgentTicketPhone page.
 - 2010-09-01 Fixed bug#5835 - Client side validation without JavaScript broken in
    customer interface.
 - 2010-09-01 Fixed bug#5816 - SysConfig HighlightAge, wrong limits and handling.
 - 2010-09-01 Fixed bug#5747 - Too much whitespace in popups.
 - 2010-09-01 Fixed bug#5801 - Article action "Bounce article" gives error message.
 - 2010-09-01 Fixed bug#5813 - Attachments of Tickets could not be loaded,
    caused by an (for IIS) invalid URL.
 - 2010-09-01 Fixed bug#4423 - Hard coded CSS-Path in DTL templates.
 - 2010-09-01 Fixed bug#5844 - Missing AJAX refresh indicator in the selection lists.
 - 2010-08-31 Fixed bug#5729 - In Database creation or delete from Installer.pl the green colored word
    "Done" higher that the rest of the line.
 - 2010-08-31 Fixed bug#5751 - TicketZoom Scroller Height is incorrectly calculated in Opera 10.61 Browser.
 - 2010-08-31 Fixed bug#5809 - SLA should be Service Level Agreement.
 - 2010-08-31 Fixed bug#2671 - Postmaster filter creation does not require a name.
 - 2010-08-31 Fixed bug#5838 - Dialogs are not shown correctly in IE7.
 - 2010-08-31 Fixed bug#5837 - Tooltips have transparent background in IE7.
 - 2010-08-31 Fixed bug#5714 - Selecting a customer in AgentTicketEmail/Phone
    changes "Priority" and "Next ticket state" selections.